--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,24 @@
   .displaynone {
     display: none;
   }
+  .displaySm {
+  top: 67px;    
+  }
+ 
 }
 
-.body {
+/* .body {
   background-image: url("https://media.istockphoto.com/id/1346168039/es/vector/vector-vertical-ilustraci%C3%B3n-de-un-fondo-abstracto-abstracto-de-color-grunge-texturizado-de.jpg?s=612x612&w=0&k=20&c=25IGyWMPYQNLFfv171qE4hrA2bw-0EO59kSyNMARHWU=");
   background-repeat: no-repeat;
   background-size: cover;
+} */
+
+.dark\:ring-dark-tremor-ring {
+  background-color: white !important;
+
+}
+
+.perreo {
+  height: 100vh !important;
+  width: 100% !important;
 }
